add Java程序安全控制（后续用Docker隔离环境取代）